# RefAssist

./: .env-example  Dockerfile  LICENSE  README.md  pyproject.toml
src/refassist/: client.py  loader.py  log.py  logging.py  main.py  query.py
src/refassist/ml/: rag.py  vectordb.py
src/refassist/ml/notebooks/: llama-3-embeddings.ipynb  llama-3-in-mlx.ipynb
src/refassist/models/: Document.py  PerplexityResponse.py  QueryResult.py  __init__.py
tests/: conftest.py  test_loader.py  test_perplexitydocs.py
