[project]
name = "refassist"
version = "0.1.0"
description = "Technical documentation helper powered by the Perplexity AI API"
requires-python = ">=3.12.8"
license = { file = "LICENSE" }
authors = [
    { name = "Torin Rozzelle", email = "hello@torinrozzelle.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }

packages = [
  "src/refassist"
]
dependencies = [
    "coremltools>=8.1",
    "duckdb>=1.1.3",
    "ibis>=3.3.0",
    "llama-index>=0.12.12",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-embeddings-huggingface-api>=0.3.0",
    "llama-index-embeddings-instructor>=0.3.0",
    "llama-index-llms-huggingface>=0.4.2",
    "loguru>=0.7.3",
    "numpy>=2.2.2",
    "ollama-python>=0.1.2",
    "openai>=1.59.9",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "mypy>=1.14.1",
  "bandit>=1.8.0",
  "docformatter>=1.7.5",
  "ruff>=0.8.6",
]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
target-version = "py312"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["src", "tests"]
strict = "true"
